<resources>
    <string name="app_name">EMMA 2023 (v1.54)</string>
    <string name="nombre">EMMA 2023</string>
    <string name="input_usuario">Usuario</string>
    <string name="input_password">Contraseña</string>
    <string name="btn_acceder">Acceder</string>
    <string name="img_logo">EMMA 2022</string>
    <string name="downloading">Descargando...</string>
    <string name="txt_bienvenida">Bienvenid@:</string>
    <string name="btn_cue">Cuestionarios Pasajeros</string>
    <string name="btn_cueTrabajadores">Cuestionarios Trabajadores</string>
    <string name="btn_transferir">Transferir cuestionarios</string>
    <string name="btn_actualiza">Actualiza datos</string>
    <string name="btn_version">Comprobar versión</string>
    <string name="btn_backup">Enviar backup</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_sesion">Cerrar sesión</string>
    <string name="button_newSurvey">Nueva encuesta</string>
    <string name="surveyslist_language_text">IDIOMA</string>
    <string name="surveyslist_codEncuestador_text">ENCUESTADOR</string>
    <string name="surveyslist_edit_codEncuestador_hint">XX</string>
    <string name="surveyslist_date_text">FECHA</string>
    <string name="surveyslist_aeropuerto_text">AEROPUERTO</string>
    <string name="surveyslist_edit_aeropuerto_hint">Aeropuerto</string>
    <string name="survey_sitemainformacion_text">Sistema de Información</string>
    <string name="survey_text_codencuestador">Código del Encuestador</string>
    <string name="survey_text_encuestasAeropuerto">Encuestas Aeropuerto de</string>
    <string name="survey_text_numEncuesta">Nº Encuesta</string>
    <string name="survey_text_fecha">FECHA</string>
    <string name="survey_text_hora">HORA</string>
    <string name="survey_text_numvuelo">Nº VUELO</string>
    <string name="surveylist_text_header_iden">IDEN</string>
    <string name="surveylist_text_header_codEncu">ENCUESTADOR</string>
    <string name="surveylist_text_header_fecha">FECHA</string>
    <string name="surveylist_text_header_codIdioma">IDIOMA</string>
    <string name="surveylist_text_header_vuelo">VUELO</string>
    <string name="surveylist_text_header_terminal">PUERTA</string>
    <string name="surveylist_text_header_numbus">Nº AUTOBUS</string>
    <string name="surveylist_text_header_numdarsena">Nº DARSENA</string>
    <string name="surveylist_text_header_enviado">ENVIADO </string>
    <string name="surveylist_text_header_delete" />
    <string name="button_upload">ENVIAR</string>
    <string name="spinner_idioma_title">SELECCIONE EL IDIOMA</string>
    <string name="spinner_close">CERRAR</string>
    <string name="survey_txt_encuestador">ENCUESTADOR</string>
    <string name="survey_txt_numEncuesta">Nº ENCUESTA</string>
    <string name="survey_text_puertaEmbarque">PUERTA</string>
    <string name="spinner_pais_title">SELECCIONE EL PAÍS</string>
    <string name="spinner_pais1y2_title">SELECCIONE EL ÁREA / REGIÓN</string>
    <string name="spinner_provincia_title">SELECCIONE LA PROVINCIA</string>
    <string name="spinner_isla_title">SELECCIONE LA ISLA</string>
    <string name="spinner_localidad_title">SELECCIONE LA LOCALIDAD</string>
    <string name="spinner_municipio_title">SELECCIONE EL MUNICIPIO</string>
    <string name="spinner_distrito_title">SELECCIONE EL DISTRITO</string>
    <string name="spinner_compania_title">SELECCIONE LA COMPAÑIA</string>
    <string name="spinner_producto_title">SELECCIONE EL PRODUCTO</string>
    <string name="spinner_tipoAeropuerto_title">SELECCIONE EL AEROPUERTO</string>
    <string name="spinner_motivo_title">SELECCIONE EL MOTIVO</string>
    <string name="spinner_playa_title">SELECCIONE LA PLAYA</string>
    <string name="survey_text_error_nviaje_num">Se debe indicar un nº de viajes</string>
    <string name="survey_text_error_bulgrupo">Se debe indicar un nº de bultos</string>
    <string name="survey_text_error_1a10">El valor debe estar comprendido entre 1 y 10</string>
    <string name="survey_text_error_mas1">Se debe indicar un valor mayor a 1</string>
    <string name="survey_text_error_mas2">Se debe indicar un valor mayor a 2</string>
    <string name="survey_text_error_Nmodos_otros">Se debe especificar una respuesta</string>
    <string name="survey_text_error_umodo">No se puede repetir el mismo modo</string>
    <string name="survey_text_error_nninos">El nº de personas que viaja en su grupo inmediato es inferior al nº de niños introducido</string>
    <string name="survey_text_error_hora_hllega">Se ha producido un error en la recogida de la hora de inicio de la encuesta. No se comprobará la hora de llegada</string>
    <string name="survey_text_error_hllega">La hora de llegada al aeropuerto del pasajero no puede ser posterior a la hora de realización de la encuesta (en cabecera)</string>
    <string name="survey_text_error_nperbul">El nº de personas que viaja en su grupo inmediato es inferior al nº de personas a las que le pertenecen los bultos</string>
    <string name="survey_text_error_taus_293">Según lo indicado en P21 la duración del viaje tiene que ser mayor a 7 días</string>
    <string name="survey_text_error_taus_291_292">Según lo indicado en P21 la duración del viaje tiene que ser menor o igual a 7 días</string>
    <string name="survey_text_m4_error_taus_293">Segun lo indicado en P13 la duración del viaje tiene que ser mayor a 7 días</string>
    <string name="survey_text_m4_error_taus_291_292">Segun lo indicado en P13 la duración del viaje tiene que ser menor o igual a 7 días</string>
    <string name="survey_text_error_vol12mes">El numero de viajes en ruta tiene que ser menor e igual que el numero de viajes en avion</string>
    <string name="survey_m1_text_cdpaisna">1. ¿Podría decirme cuál es su nacionalidad?</string>
    <string name="survey_m1_text_cdpaisre">2. ¿En qué PAÍS ha estado residiendo la mayor parte de los últimos 12 meses?</string>
    <string name="survey_m1_text_cdpaisre_ent">Para España preguntar Provincia y localidad. Países lista 1 y 2 área del mapa</string>
    <string name="survey_m1_text_cdpaisre_prov">Provincia</string>
    <string name="survey_m1_text_cdlocado">Localidad</string>
    <string name="survey_m1_text_distres">Distrito para Madrid capital</string>
    <string name="survey_m1_text_distres_bcn">Distrito para Barcelona capital</string>
    <string name="survey_m1_text_distres_area">Área / Región</string>
    <string name="survey_m1_text_distresotro">Especificar calle y nº, hotel o similar</string>
    <string name="survey_m1_text_cdcambio">3. ¿Ha llegado al aeropuerto para realizar una conexión?</string>
    <string name="survey_m1_radio_cdcambio_option1">Sí</string>
    <string name="survey_m1_radio_cdcambio_option2">No</string>
    <string name="survey_m1_text_diaptoo">4. ¿Desde qué AEROPUERTO ha volado para llegar aquí?</string>
    <string name="survey_m1_text_diaptoo_ent">Concretar estado/país</string>
    <string name="survey_m1_text_diaptoo_otro">Especificar</string>
    <string name="survey_m1_text_cdidavue">23. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_m1_radio_cdidavue_option1">Ida</string>
    <string name="survey_m1_text_cdidavue_a">23a. ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_m1_radio_cdidavue_option2">Vuelta</string>
    <string name="survey_m1_text_cdidavue_b">23b. ¿Cuánto tiempo ha estado fuera?</string>
    <string name="survey_m1_check_cdidavue_option0">Regreso en el mismo día</string>
    <string name="survey_m1_text_taus">Nº de días</string>
    <string name="survey_m1_text_cdsprof">37. Usted trabaja como...</string>
    <string name="survey_m1_radio_cdsprof_option1">Empresario o profesional con empleados</string>
    <string name="survey_m1_radio_cdsprof_option2">Profesional o trabajador autónomo</string>
    <string name="survey_m1_radio_cdsprof_option5">Trabajador por cuenta ajena</string>
    <string name="survey_m1_radio_cdsprof_option6">Asalariado fijo del sector privado</string>
    <string name="survey_m1_radio_cdsprof_option0">Asalariado eventual o interino</string>
    <string name="survey_m1_text_cdedad">39. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_m1_radio_cdedad_option1">menor de 15 años</string>
    <string name="survey_m1_radio_cdedad_option2">15 a 19 años</string>
    <string name="survey_m1_radio_cdedad_option3">20 a 24 años</string>
    <string name="survey_m1_radio_cdedad_option4">25 a 29 años</string>
    <string name="survey_m1_radio_cdedad_option5">30 a 39 años</string>
    <string name="survey_m1_radio_cdedad_option6">40 a 49 años</string>
    <string name="survey_m1_radio_cdedad_option7">50 a 59 años</string>
    <string name="survey_m1_radio_cdedad_option8">60 a 64 años</string>
    <string name="survey_m1_radio_cdedad_option9">65 a 69 años</string>
    <string name="survey_m1_radio_cdedad_option10">70 a 79 años</string>
    <string name="survey_m1_radio_cdedad_option11">80 a 84 años</string>
    <string name="survey_m1_radio_cdedad_option12">mayor de 85 años</string>
    <string name="survey_text_zonatrab">6. Indique la zona por la que accede habitualmente al Aeropuerto</string>
    <string name="survey_text_zonatrab_ent">(puede seleccionar más de una opción)</string>
    <string name="survey_check_zonatrab_option1">T1</string>
    <string name="survey_check_zonatrab_option2">T2-3</string>
    <string name="survey_check_zonatrab_option3">T4-T4S</string>
    <string name="survey_check_zonatrab_option4">Terminal Ejecutiva</string>
    <string name="survey_check_zonatrab_option5">Zona Carga Aérea</string>
    <string name="survey_check_zonatrab_option6">Zona de Rampa</string>
    <string name="survey_text_cdedadtrab">24. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_radio_cdedadtrab_option1">Menor de 30</string>
    <string name="survey_radio_cdedadtrab_option2">30 a 44</string>
    <string name="survey_radio_cdedadtrab_option3">45 a 60</string>
    <string name="survey_radio_cdedadtrab_option4">Mayor de 60</string>
    <string name="survey_m4_text_cdidavue">14. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_ACE_text_cdidavue">15. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_m4_text_cdidavue_a">14a. ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_ACE_text_cdidavue_a">15a. ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_m4_text_cdidavue_b">14b. ¿Cuánto tiempo ha estado fuera?</string>
    <string name="survey_ACE_text_cdidavue_b">15b. ¿Cuánto tiempo ha estado fuera?</string>
    <string name="survey_m4_text_taus">Nº de días</string>
    <string name="survey_m4_text_cdsprof">32. Usted trabaja como...</string>
    <string name="survey_m4_text_cdedad">34. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_m5_text_cdsprof">29. Usted trabaja como...</string>
    <string name="survey_GC_text_cdsprof">28. Usted trabaja como...</string>
    <string name="survey_m5_text_cdedad">31. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_GC_text_cdedad">30. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_m2_text_cdidavue">18. ¿Es este su viaje de IDA o de VUELTA?</string>
    <string name="survey_m2_text_cdidavue_a">18a. ¿Cuánto tiempo estará fuera?</string>
    <string name="survey_m2_text_cdidavue_b">18b. ¿Cuánto tiempo ha estado fuera?</string>
    <string name="survey_m2_text_cdsprof">33. Usted trabaja como...</string>
    <string name="survey_m2_radio_cdsprof_option9">Otra situación</string>
    <string name="survey_m2_text_cdedad">35. ¿A cuál de estos grupos de edad pertenece usted?</string>
    <string name="survey_SCQ_text_cdsprof">31. Usted trabaja como...</string>
    <string name="survey_SCQ_text_cdedad">33. ¿A cuál de estos grupos de edad pertenece usted?</string>
</resources>