<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">
    <LinearLayout
        android:id="@+id/survey_layout_cdedad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/SurveySingleQuestion"
        android:visibility="gone">

        <TextView
            android:id="@+id/survey_text_cdedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m1_text_cdedad"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/survey_text_cdedad_m4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m4_text_cdedad"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdedad_GC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_GC_text_cdedad"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdedad_m5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m5_text_cdedad"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdedad_m2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m2_text_cdedad"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdedad_SCQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_SCQ_text_cdedad"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/survey_radiogroup_cdedad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option1" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option2" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option3" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option4" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option5" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option6" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option7" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option8" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option9" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option10" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option11" />

                <RadioButton
                    android:id="@+id/survey_radio_cdedad_option12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdedad_option12" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>