<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">
    <LinearLayout
        android:id="@+id/survey_layout_cdsprof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/SurveySingleQuestion"
        android:visibility="gone">

        <TextView
            android:id="@+id/survey_text_cdsprof"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m1_text_cdsprof"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/survey_text_cdsprof_m4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m4_text_cdsprof"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdsprof_m5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m5_text_cdsprof"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdsprof_GC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_GC_text_cdsprof"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdsprof_m2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_m2_text_cdsprof"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/survey_text_cdsprof_SCQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SurveyQuestionTitle"
            android:text="@string/survey_SCQ_text_cdsprof"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/survey_radiogroup_cdsprof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdsprof_option1" />

                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdsprof_option2" />

                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdsprof_option5"
                    android:visibility="visible"/>


                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdsprof_option6"
                    android:visibility="visible"/>

                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m1_radio_cdsprof_option0"
                    android:visibility="visible"/>

                <RadioButton
                    android:id="@+id/survey_radio_cdsprof_option9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_m2_radio_cdsprof_option9"
                    android:visibility="gone" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>