<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/survey_layout_zonatrab"
        android:orientation="vertical"
        style="@style/SurveySingleQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/survey_text_zonatrab"
            style="@style/SurveyQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_zonatrab" />

        <TextView
            android:id="@+id/survey_text_zonatrab_ent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_zonatrab_ent"
            android:visibility="visible"
            style="@style/SurveyQuestionHelp"/>

        <LinearLayout
            android:id="@+id/survey_layout_check_zonatrab"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/check_zonatrab_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option1" />

            <CheckBox
                android:id="@+id/check_zonatrab_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option2" />

            <CheckBox
                android:id="@+id/check_zonatrab_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option3" />

            <CheckBox
                android:id="@+id/check_zonatrab_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option4" />

            <CheckBox
                android:id="@+id/check_zonatrab_option5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option5" />

            <CheckBox
                android:id="@+id/check_zonatrab_option6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_check_zonatrab_option6" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>