<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <RelativeLayout
        android:id="@+id/survey_layout_cdedadtrab"
        style="@style/SurveySingleQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/survey_text_cdedadtrab"
            style="@style/SurveyQuestionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey_text_cdedadtrab" />

        <RadioGroup
            android:id="@+id/survey_radiogroup_cdedadtrab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/survey_text_cdedadtrab"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/survey_radio_cdedadtrab_option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_cdedadtrab_option1" />

            <RadioButton
                android:id="@+id/survey_radio_cdedadtrab_option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_cdedadtrab_option2" />

            <RadioButton
                android:id="@+id/survey_radio_cdedadtrab_option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_cdedadtrab_option3" />

            <RadioButton
                android:id="@+id/survey_radio_cdedadtrab_option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/survey_radio_cdedadtrab_option4" />

        </RadioGroup>
    </RelativeLayout>
</LinearLayout>